--- a/use-form/Form1.html
+++ b/use-form/Form1.html
@@ -14,6 +14,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="form.css" />
     <script src="uipathApi.js" defer type="text/javascript"></script>
+    <script src="renderPerson.js" defer type="text/javascript"></script>
+    <script src="formEvent.js" defer type="text/javascript"></script>
   </head>
 
   <body>
