--- a/use-form/TestForm.html
+++ b/use-form/TestForm.html
@@ -14,6 +14,7 @@
     <title>Test Form</title>
     <link rel="stylesheet" href="form.css" />
     <script src="uipathApi.js" defer type="text/javascript"></script>
+    <script src="renderPerson.js" defer type="text/javascript"></script>
   </head>
   <body>
     <div>
