--- a/use-form/Form1.html
+++ b/use-form/Form1.html
@@ -20,12 +20,24 @@
 
   <body>
     <h2>회의실 예약 로봇을 실행 합니다</h2>
-    <div class="select-person-wrapper">
+    <section class="select-person-wrapper">
       <h3>참석자를 선택해주세요</h3>
       <ul class="select-person-list" id="select-person-list"></ul>
-    </div>
-    <div class="result-person-wrapper hidden">
+    </section>
+    <section class="result-person-wrapper hidden">
       <ul id="result-person-list"></ul>
-    </div>
-  </body>
+    </section>
+
+    <input type="time" min="08:00" max="18:00" step="1800" required />
+    <input type="date" />
+
+    <select name="" id="start_time">
+      <option value="08:00">08:00</option>
+    </select>
+    <select name="" id="">
+      <option value="test">test</option>
+      <option value="test">test1</option>
+      <option value="test">test2</option>
+      <option value="test">test3</option>
+    </select>
 </html>
