--- a/use-form/Form1.html
+++ b/use-form/Form1.html
@@ -27,17 +27,5 @@
     <section class="result-person-wrapper hidden">
       <ul id="result-person-list"></ul>
     </section>
-
-    <input type="time" min="08:00" max="18:00" step="1800" required />
-    <input type="date" />
-
-    <select name="" id="start_time">
-      <option value="08:00">08:00</option>
-    </select>
-    <select name="" id="">
-      <option value="test">test</option>
-      <option value="test">test1</option>
-      <option value="test">test2</option>
-      <option value="test">test3</option>
-    </select>
+  </body>
 </html>
