add Layout : buttons

--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -43,6 +43,10 @@
           <label for="agenda_input">안건</label>
           <input type="text" />
         </section>
+        <section id="reservation_buttons">
+          <button id="reservation_confirm">Confirm</button>
+          <button id="reservation_cancel">Cancel</button>
+        </section>
       </section>
 
       <!-- 회의실 선택 -->
