--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회의실 예약</title>
     <link rel="stylesheet" href="app.css" />
+    <script src="uipathApi.js" defer></script>
+    <script src="app.js" defer></script>
+    <script src="DomEvent.js" defer></script>
   </head>
   <body>
     <main id="main">
@@ -19,33 +22,98 @@
             <option value="권정연">권정연</option>
             <option value="김권수">김권수</option>
           </select>
-          <button id="add_person">추가</button>
+          <button id="add_person_btn">추가</button>
         </section>
 
         <section id="result_person_wrapper">
           <h4>선택된 참석자</h4>
           <ul id="result_person_list">
-            <li>윤경덕</li>
-            <li>이재원</li>
+            <!-- <li>윤경덕</li>
+            <li>이재원</li> -->
           </ul>
         </section>
         <section id="date_option">
           <label for="date_option">날짜선택</label>
-          <input type="date" name="date_option" value="?" />
+          <input type="date" name="date_option" id="userinput_date" />
         </section>
         <section id="time_option">
           <label for="start_time">시작</label>
-          <input type="time" name="start_time" />
+          <select name="start_time" id="start_time">
+            <option value="08:00">08:00</option>
+            <option value="08:30">08:30</option>
+            <option value="09:00">09:00</option>
+            <option value="09:30">09:30</option>
+            <option value="10:00">10:00</option>
+            <option value="10:30">10:30</option>
+            <option value="11:00">11:00</option>
+            <option value="11:30">11:30</option>
+            <option value="12:00">12:00</option>
+            <option value="12:30">12:30</option>
+            <option value="13:00">13:00</option>
+            <option value="13:30">13:30</option>
+            <option value="14:00">14:00</option>
+            <option value="14:30">14:30</option>
+            <option value="15:00">15:00</option>
+            <option value="15:30">15:30</option>
+            <option value="16:00">16:00</option>
+            <option value="16:30">16:30</option>
+            <option value="17:00">17:00</option>
+            <option value="17:30">17:30</option>
+            <option value="18:00">18:00</option>
+            <option value="18:30">18:30</option>
+            <option value="19:00">19:00</option>
+            <option value="19:30">19:30</option>
+            <option value="20:00">20:00</option>
+          </select>
+
           <label for="end_time">종료</label>
-          <input type="time" name="end_time" />
+          <select name="end_time" id="userinput_endtime">
+            <option value="08:00">08:00</option>
+            <option value="08:30">08:30</option>
+            <option value="09:00">09:00</option>
+            <option value="09:30">09:30</option>
+            <option value="10:00">10:00</option>
+            <option value="10:30">10:30</option>
+            <option value="11:00">11:00</option>
+            <option value="11:30">11:30</option>
+            <option value="12:00">12:00</option>
+            <option value="12:30">12:30</option>
+            <option value="13:00">13:00</option>
+            <option value="13:30">13:30</option>
+            <option value="14:00">14:00</option>
+            <option value="14:30">14:30</option>
+            <option value="15:00">15:00</option>
+            <option value="15:30">15:30</option>
+            <option value="16:00">16:00</option>
+            <option value="16:30">16:30</option>
+            <option value="17:00">17:00</option>
+            <option value="17:30">17:30</option>
+            <option value="18:00">18:00</option>
+            <option value="18:30">18:30</option>
+            <option value="19:00">19:00</option>
+            <option value="19:30">19:30</option>
+            <option value="20:00">20:00</option>
+          </select>
         </section>
         <section id="title_option">
           <label for="title_input">제목</label>
-          <input type="text" name="title_input" />
+          <input
+            type="text"
+            name="title_input"
+            id="userinput_title"
+            required
+            placeholder="회의 제목을 입력해주세요"
+          />
         </section>
         <section id="arenda_option">
           <label for="agenda_input">안건</label>
-          <input type="text" />
+          <input
+            type="text"
+            name="agenda_input"
+            id="userinput_agenda"
+            required
+            placeholder="회의 안건을 입력해주세요"
+          />
         </section>
         <section id="reservation_buttons">
           <button id="reservation_confirm">Confirm</button>
