--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -124,7 +124,7 @@
 
       <!-- 회의실 선택 -->
       <aside id="select_room">
-        <input type="text" id="conference_select_hidden" / >
+        <p id="dummy_value" style="display: none"></p>
         <h3 id="conference_select_title">회의실을 찾는 중입니다.</h3>
         <ul id="conference_room_select"></ul>
       </aside>
