add func : 회의실 동적 렌더링

--- a/selectOption.html
+++ b/selectOption.html
@@ -7,6 +7,7 @@
     <script></script>
   </head>
   <body>
+    <input type="date" />
     <form action="#">
       <label for="lang">Language</label>
       <select name="languages" id="lang" multiple>
