--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -35,7 +35,12 @@
         </section>
         <section id="date_option">
           <label for="date_option">날짜선택</label>
-          <input type="date" name="date_option" id="userinput_date" />
+          <input
+            type="date"
+            name="date_option"
+            id="userinput_date"
+            pattern="\d{4}-\d{2}-\d{2}"
+          />
         </section>
         <section id="time_option">
           <label for="start_time">시작</label>
@@ -120,14 +125,15 @@
           <button id="reservation_confirm">Confirm</button>
           <button id="reservation_cancel">Cancel</button>
         </section>
-      </section>
 
-      <!-- 회의실 선택 -->
-      <aside id="select_room">
-        <p id="dummy_value" style="display: none"></p>
-        <h3 id="conference_select_title">회의실을 찾는 중입니다.</h3>
-        <ul id="conference_room_select"></ul>
-      </aside>
+        <!-- 회의실 선택 -->
+        <section id="select_room">
+          <p id="dummy_value" style="display: none"></p>
+          <h3 id="conference_select_title">회의실을 찾는 중입니다.</h3>
+          <ul id="conference_room_select"></ul>
+          <button id="room_select_btn" class="hidden">확인</button>
+        </section>
+      </section>
     </main>
   </body>
 </html>
