--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회의실 예약</title>
     <link rel="stylesheet" href="app.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <script src="uipathApi.js" defer></script>
     <script src="app.js" defer></script>
     <script src="DomEvent.js" defer></script>
@@ -28,10 +29,7 @@
 
         <section id="result_person_wrapper">
           <h4>선택된 참석자</h4>
-          <ul id="result_person_list">
-            <!-- <li>윤경덕</li>
-            <li>이재원</li> -->
-          </ul>
+          <ul id="result_person_list"></ul>
         </section>
         <section id="date_option">
           <label for="date_option">날짜선택</label>
