--- a/selectOption.html
+++ b/selectOption.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Select Test</title>
-    <script></script>
+    <style>
+      input[type="date"]::before {
+        content: attr(data-placeholder);
+        width: 100%;
+      }
+      input[type="date"]:focus::before,
+      input[type="date"]:valid::before {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <input type="date" />
@@ -20,7 +29,7 @@
         <option value="C++">C++</option>
         <option value="erlang">Erlang</option>
       </select>
-      <input type="date" id="date" />
+      <input type="date" id="date" data-placeholder="날짜 선택" required />
       <input type="time" id="time" />
       <input type="submit" value="Submit" />
     </form>
