--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -143,9 +143,9 @@
           <p id="dummy_value" style="display: none"></p>
           <h3 id="conference_select_title">회의 정보 입력 전 입니다</h3>
           <ul id="conference_room_select"></ul>
-          <div id="room_select_btn_wrap">
+          <div id="room_select_btn_wrap" class="hidden">
             <img src="./assets/cocoa.png" alt="" class="cocoa_logo" />
-            <button id="room_select_btn" class="hidden confirm">Confirm</button>
+            <button id="room_select_btn" class="confirm">Confirm</button>
           </div>
         </section>
       </section>
