--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -16,7 +16,7 @@
     <main id="main">
       <section id="reservation_wrapper">
         <section class="logo_header">
-          <img class="logo" src="./assets/image-16.png" />
+          <img class="logo" src="./assets/HAE.png" />
         </section>
         <h1>회의 정보를 입력해주세요</h1>
         <section id="select_person_wrapper">
