--- a/ScheduleRegistration/ScheduleRegistration.html
+++ b/ScheduleRegistration/ScheduleRegistration.html
@@ -43,12 +43,17 @@
           />
         </section>
         <section id="section_mailbody">
-          <input
+          <textarea
+            name=""
+            id="userinput_mailbody"
+            placeholder="메일 내용 추가"
+          ></textarea>
+          <!-- <input
             type="text"
             id="userinput_mailbody"
             placeholder="메일 내용 추가"
             class="big"
-          />
+          /> -->
         </section>
         <section id="button_wrapper">
           <button id="schedul_cancel_btn" class="cancel">Cancel</button>
