회의실 예약: 마지막 COnfirm 버튼 동작 추가

--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,7 +36,7 @@
           <ul id="result_person_list"></ul>
         </section>
         <section id="date_option">
-          <!-- <label for="date_option">날짜선택</label> -->
+          <label for="date_option" style="display: none">날짜선택</label>
           <input
             type="date"
             data-placeholder="날짜 선택"
