form 최종 수정 전

--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -54,7 +54,7 @@
             class="small_select"
           >
             <option value="" disabled selected>시작</option>
-            <option value="08:00">08:00</option>
+            <!-- <option value="08:00">08:00</option>
             <option value="08:30">08:30</option>
             <option value="09:00">09:00</option>
             <option value="09:30">09:30</option>
@@ -78,13 +78,13 @@
             <option value="18:30">18:30</option>
             <option value="19:00">19:00</option>
             <option value="19:30">19:30</option>
-            <option value="20:00">20:00</option>
+            <option value="20:00">20:00</option> -->
           </select>
           <span>~</span>
           <!-- <label for="end_time">종료</label> -->
           <select name="end_time" id="userinput_endtime" class="small_select">
             <option value="" disabled selected>종료</option>
-            <option value="08:00">08:00</option>
+            <!-- <option value="08:00">08:00</option>
             <option value="08:30">08:30</option>
             <option value="09:00">09:00</option>
             <option value="09:30">09:30</option>
@@ -108,7 +108,7 @@
             <option value="18:30">18:30</option>
             <option value="19:00">19:00</option>
             <option value="19:30">19:30</option>
-            <option value="20:00">20:00</option>
+            <option value="20:00">20:00</option> -->
           </select>
         </section>
         <section id="title_option">
