--- a/ConferenceRoomReservation/ConferenceRoom.html
+++ b/ConferenceRoomReservation/ConferenceRoom.html
@@ -13,6 +13,7 @@
     <script src="./src/observer.js" defer></script>
   </head>
   <body>
+    <p id="ex" style="display: none"></p>
     <main id="main">
       <section id="reservation_wrapper">
         <section class="logo_header">
